--- a/arxiv/2023_11_arxiv.html
+++ b/arxiv/2023_11_arxiv.html
@@ -108,6 +108,83 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.05568">https://arxiv.org/abs/2311.05568</a></span> Anomalous Hall Crystals in Rhombohedral Multilayer Graphene I: Interaction-Driven Chern Bands and Fractional Quantum Hall States at Zero Magnetic Field (Ashvin Vishwanath, Daniel E. Parker)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04970">https://arxiv.org/abs/2311.04970</a></span> Theory of topological exciton insulators and condensates in flat Chern bands</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04958">https://arxiv.org/abs/2311.04958</a></span> Moiré Fractional Chern Insulators I: First-principles calculations and Continuum Models of Twisted Bilayer MoTe2 (B. Andrei Bernevig)</p>
+<br>
+<p class="p1">20231113</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.05674">https://arxiv.org/abs/2311.05674</a></span> Higher-group symmetry of (3+1)D fermionic Z2 gauge theory: logical CCZ, CS, and T gates from higher symmetry ***** (Maissam Barkeshli, Po-Shen Hsin, Ryohei Kobayashi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.05695">https://arxiv.org/abs/2311.05695</a></span> Realization of Hilbert Space Fragmentation and Fracton Dynamics in 2D ***** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.05946">https://arxiv.org/abs/2311.05946</a></span> <i>A</i>V3Sb5 Kagome Superconductors: Progress and Future Directions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.10190">https://arxiv.org/abs/2308.10190</a></span> Two-Fluid Theory of Composite Bosons and Fermions and the Quantum Hall Proximity Effect **** (Zhaoyu Han, Kyung-Su Kim, Steven A. Kivelson, Thors Hans Hansson)</p>
+<p class="p2"><br></p>
+<p class="p1">20231114</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.06350">https://arxiv.org/abs/2311.06350</a></span> Deconfined Quantum Criticality in the long-range, anisotropic Heisenberg Chain *** (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.07053">https://arxiv.org/abs/2311.07053</a></span> Symmetry, topology, duality, chirality, and criticality in a spin-1 XXZ ladder with a four-spin interaction ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.06773">https://arxiv.org/abs/2311.06773</a></span> Sublattice scars and beyond in two-dimensional U(1) quantum link lattice gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.07428">https://arxiv.org/abs/2311.07428</a></span> Quantum Phase Transition in CeCoIn5: Experimental Facts and Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.07533">https://arxiv.org/abs/2311.07533</a></span> Lattice relaxation, electronic structure and continuum model for twisted bilayer MoTe2 (Liang Fu)</p>
+<p class="p2"><br></p>
+<p class="p1">20231115</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.07882">https://arxiv.org/abs/2311.07882</a></span> Nonreciprocal transport in U (1) gauge theory of high-Tc cuprates **** (Taekoo Oh, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.07662">https://arxiv.org/abs/2311.07662</a></span> Noninvertible symmetries and anomalies from gauging 1-form electric centers **</p>
+<p class="p2"><br></p>
+<p class="p1">20231116</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.08455">https://arxiv.org/abs/2311.08455</a></span> Deconfinement Dynamics of Fractons in Tilted Bose-Hubbard Chains **** (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.08974">https://arxiv.org/abs/2311.08974</a></span> Transport properties of strongly correlated Fermi systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.09039">https://arxiv.org/abs/2311.09039</a></span> RG Flows and Fixed Points of O(N)r Models *****</p>
+<p class="p2"><br></p>
+<p class="p1">20231117</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.09959">https://arxiv.org/abs/2311.09959</a></span> Non-Hermitian topology and criticality in photonic arrays with engineered losses</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.09323">https://arxiv.org/abs/2311.09323</a></span> Dimensional reduction from magnetic field in moir ́e superlattices *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.09823">https://arxiv.org/abs/2311.09823</a></span> Spin-phonon interactions on the kagome lattice: Dirac spin liquid versus valence-bond solids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.09970">https://arxiv.org/abs/2311.09970</a></span> Fermi surface symmetric mass generation: a quantum Monte-Carlo study *** (Yi-Zhuang You)</p>
+<br>
+<p class="p1">20231120</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.10569">https://arxiv.org/abs/2311.10569</a></span> Kondo effect in the isotropic Heisenberg spin chain (Pradip Kattel, Parameshwar R. Pasnoori, J. H. Pixley, Patrick Azaria, Natan Andrei)</p>
+<p class="p2"><br></p>
+<p class="p1">20231121</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.12031">https://arxiv.org/abs/2311.12031</a></span> Topological Diagnosis of Strongly Correlated Electron Systems ***** (Chandan Setty, Fang Xie, Shouvik Sur, Lei Chen, Silke Paschen, Maia G. Vergniory, Jennifer Cano, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.11577">https://arxiv.org/abs/2311.11577</a></span> Quantum geometric bound and ideal condition for Euler band topology (Bohm-Jung Yang)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2311.11026">https://arxiv.org/abs/2311.11026</a><span class="s2"> Higher Topos Theory in Physics</span></p>
+<p class="p2"><br></p>
+<p class="p1">20231122</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.12729">https://arxiv.org/abs/2311.12729</a></span> Adiabatic observables and Berry curvatures in insulators and metals ***** (Raffaele Resta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.12797">https://arxiv.org/abs/2311.12797</a></span> Tilted Dirac superconductor at quantum criticality: Restoration of Lorentz symmetry (Vladimir Juriˇci ́c)</p>
+<p class="p2"><br></p>
+<p class="p1">20231123</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.13156">https://arxiv.org/abs/2311.13156</a></span> Fractonic Quantum Quench in Dipole-constrained Bosons ***** (Yun-Tak Oh, Jung Hoon Han, Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.12922">https://arxiv.org/abs/2311.12922</a></span> Controlled expansion for transport in a class of non-Fermi liquids ***** (Zhengyan Darius Shi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.12941">https://arxiv.org/abs/2311.12941</a></span> Controlled Interlayer Exciton Ionization in an Electrostatic Trap in Atomically Thin Heterostructures *** (Mikhail D. Lukin, Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04822">https://arxiv.org/abs/2303.04822</a></span> Extracting higher central charge from a single wave function (Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20231127</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.13641">https://arxiv.org/abs/2311.13641</a></span> Emergent chiral metal near a Kondo breakdown quantum phase transition *** (Matthias Vojta)</p>
+<p class="p2"><br></p>
+<p class="p1">20231128</p>
+<p class="p3"><a href="https://arxiv.org/abs/2311.15155">https://arxiv.org/abs/2311.15155</a><span class="s2"> Asymmetric Bethe Ansatz</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.15580">https://arxiv.org/abs/2311.15580</a></span> Erasure-cooling, control, and hyper-entanglement of motion in optical tweezers **** (Joonhee Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.15677">https://arxiv.org/abs/2311.15677</a></span> Towards a classification of PT-symmetric quantum systems: from dissipative dynamics to topology and wormholes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.15911">https://arxiv.org/abs/2311.15911</a></span> What are the emergent fermions and gauge fields in magnetized kagom ́e spin liquid? **** (Gang V. Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16068">https://arxiv.org/abs/2311.16068</a></span> Symmetry breaking in vanadium trihalides</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.14914">https://arxiv.org/abs/2311.14914</a></span> A Replica-BCS theory for dirty superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.15092">https://arxiv.org/abs/2311.15092</a></span> D-Wave and Pair-Density-Wave Superconductivity in the Square-Lattice t-J Model (Feng Chen, F. D. M. Haldane, D. N. Sheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.15085">https://arxiv.org/abs/2311.15085</a></span> Corrections to Landau Fermi-liquid fixed-point approximation in nonlinear bosonized theory: Application to gAL in nuclei *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.00605">https://arxiv.org/abs/2312.00605</a></span> Edge modes, extended TQFT, and measurement based quantum computation (Gabriel Wong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.00615">https://arxiv.org/abs/2312.00615</a></span> Phase Transitions, Spontaneous Symmetry Breaking, and Goldstone’s Theorem *****</p>
+<p class="p2"><br></p>
+<p class="p1">20231129</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16216">https://arxiv.org/abs/2311.16216</a></span> Density wave halo around anyons in fractional quantum anomalous hall states ***** (Xue-Yang Song, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16250">https://arxiv.org/abs/2311.16250</a></span> The Conjugate Composite Fermi Liquid ***** (Nayan Myerson-Jain, Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16343">https://arxiv.org/abs/2311.16343</a></span> System-Environment Entanglement Phase Transitions ***** (Yuto Ashida, Shunsuke Furukawa, Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16761">https://arxiv.org/abs/2311.16761</a></span> Transport properties of a half-filled Chern band at the electron and composite fermion phases *** (Ady Stern, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16758">https://arxiv.org/abs/2311.16758</a></span> A Floquet-Rydberg quantum simulator for confinement in Z2 gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16235">https://arxiv.org/abs/2311.16235</a></span> Entanglement of Gauge Theories: from the Toric Code to the Z2 Lattice Gauge Higgs Model **** (Michael Knap, Frank Pollmann)</p>
+<p class="p2"><br></p>
+<p class="p1">20231130</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.17859">https://arxiv.org/abs/2311.17859</a></span> Z2 = 0 is topological too **** (A. H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.18069">https://arxiv.org/abs/2311.18069</a></span> Observation of an electronic microemulsion phase emerging from a quantum crystal-to-liquid transition (Ilya Esterlis, Andrew J. Millis, Mikhail D. Lukin, Philip Kim, Eugene Demler, Hongkun Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.18019">https://arxiv.org/abs/2311.18019</a></span> Superconductivity due to fluctuating loop currents **** (Rafael M. Fernandes, Jörg Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13068">https://arxiv.org/abs/2304.13068</a></span> Spin-polarons and ferromagnetism in doped dilute moiré-Mott insulators (Urban F. P. Seifert, Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.11933">https://arxiv.org/abs/2304.11933</a></span> Analytic Solution of n-dimensional Su-Schrieffer–Heeger Model</p>
+<p class="p3"><a href="https://arxiv.org/abs/2311.18111">https://arxiv.org/abs/2311.18111</a><span class="s2"> Introduction to String Theory *****</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
