--- a/arxiv/2023_12_arxiv.html
+++ b/arxiv/2023_12_arxiv.html
@@ -117,6 +117,72 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.09074">https://arxiv.org/abs/2312.09074</a></span> Anomalies of Average Symmetries: Entanglement and Open Quantum Systems *** (Po-Shen Hsin, Zhu-Xi Luo, Hao-Yu Sun)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.09135">https://arxiv.org/abs/2312.09135</a></span> Measurement-induced landscape transitions in hybrid variational quantum circuits *** (Michael J. Lawler)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.08475">https://arxiv.org/abs/2312.08475</a></span> Emergent Fermion Dynamical Symmetry for Monolayer Graphene in a Strong Magnetic Field *****</p>
+<br>
+<p class="p1">20231218</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.09435">https://arxiv.org/abs/2312.09435</a></span> Fermionic quartet and vestigial gravity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.09286">https://arxiv.org/abs/2312.09286</a></span> Vacancy-induced tunable Kondo effect in twisted bilayer graphene (David Vanderbilt, Gabriel Kotliar, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.09396">https://arxiv.org/abs/2312.09396</a></span> Quantum Foundations as a Guide for Refining Particle Theories (Gerard ’t Hooft)</p>
+<p class="p2"><br></p>
+<p class="p1">20231219</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.10790">https://arxiv.org/abs/2312.10790</a></span> Surface quantum critical phenomena in disordered Dirac semimetals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.10659">https://arxiv.org/abs/2312.10659</a></span> Flat bands, strange metals, and the Kondo effect ***** (Joseph G. Checkelsky, B. Andrei Bernevig, Piers Coleman, Qimiao Si, Silke Paschen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11188">https://arxiv.org/abs/2312.11188</a></span> Detecting Quantum Anomalies in Open Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.12546">https://arxiv.org/abs/2312.12546</a></span> Conformal field theories in a magnetic field **** (Rufus Boyack, Luca Delacrétaz, Éric Dupuis, William Witczak-Krempa)</p>
+<p class="p2"><br></p>
+<p class="p1">20231220</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11617">https://arxiv.org/abs/2312.11617</a></span> Moir ́e Fractional Chern Insulators III: Hartree-Fock Phase Diagram, Magic Angle Regime for Chern Insulator States, the Role of the Moir ́e Potential and Goldstone Gaps in Rhombohedral Graphene Superlattices (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11693">https://arxiv.org/abs/2312.11693</a></span> Dynamical Mean Field Theory for Low Density and Dirac Materials (Andrew J. Millis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11614">https://arxiv.org/abs/2312.11614</a></span> The Nordic-walking mechanism and its explanation of deconfined pseudocriticality from Wess-Zumino-Witten theory *** (Lukas Janssen, Michael M. Scherer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11615">https://arxiv.org/abs/2312.11615</a></span> Universal structure of measurement-induced information in many-body ground states (Andrew C. Potter)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11516">https://arxiv.org/abs/2312.11516</a></span> Essay: Where Can Quantum Geometry Lead Us?</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.11641">https://arxiv.org/abs/2312.11641</a></span> Experimentally tunable QED in dipolar-octupolar quantum spin ice **** (Han Yan, Alaric Sanders, Claudio Castelnovo, Andriy H. Nevidomskyy)</p>
+<p class="p2"><br></p>
+<p class="p1">20231221</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13181">https://arxiv.org/abs/2312.13181</a></span> From Resistance Minimum to Kondo Physics *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.06949">https://arxiv.org/abs/2305.06949</a></span> Twisted bilayer graphene at charge neutrality: competing orders of SU(4) Dirac fermions *** (Laura Classen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.05444">https://arxiv.org/abs/2303.05444</a></span> Conformal Field Theory Ground States as Critical Points of an Entropy Function *** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04611">https://arxiv.org/abs/2301.04611</a></span> Vacuum stability, fixed points, and phases of QED3 at large Nf</p>
+<p class="p2"><br></p>
+<p class="p1">20231222</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13341">https://arxiv.org/abs/2312.13341</a></span> BOSONIZATION AND ANOMALY INDICATORS OF (2+1)-D FERMIONIC TOPOLOGICAL ORDERS ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.14058">https://arxiv.org/abs/2312.14058</a></span> Probing quantum properties of black holes with a Floquet-driven optical lattice simulator (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13390">https://arxiv.org/abs/2312.13390</a></span> Dimer piling problems and interacting field theory **** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13531">https://arxiv.org/abs/2312.13531</a></span> Quantum electrodynamics under a quench ***** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13392">https://arxiv.org/abs/2312.13392</a></span> Superfluid stiffness within Eliashberg theory: the role of vertex corrections *** (Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13348">https://arxiv.org/abs/2312.13348</a></span> Charge-4e Superconductivity in a Hubbard model (Titus Neupert)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13366">https://arxiv.org/abs/2312.13366</a></span> Strange-metal behavior without fine-tuning in PrV2Al20 (Andriy H. Nevidomskyy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13498">https://arxiv.org/abs/2312.13498</a></span> Extracting subleading corrections in entanglement entropy at quantum phase transitions (Zi Yang Meng, Cenke Xu, Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.14026">https://arxiv.org/abs/2312.14026</a></span> Non-Fermi liquid fixed point of the dissipative Yukawa-Sachdev-Ye-Kitaev model **** (Peter Kopietz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13367">https://arxiv.org/abs/2312.13367</a></span> Topological Superconductivity in Twisted Flakes of Nodal Superconductors (J. H. Pixley, Pavel A. Volkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.07308">https://arxiv.org/abs/2312.07308</a></span> Higher geometry in physics ***</p>
+<p class="p2"><br></p>
+<p class="p1">20231225</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.14178">https://arxiv.org/abs/2312.14178</a></span> Drude weight in presence of nonlocal potentials *** (Raffaele Resta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.14644">https://arxiv.org/abs/2312.14644</a></span> Thermodynamics and dynamics of coupled complex SYK models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06501">https://arxiv.org/abs/2302.06501</a></span> Continuous phase transitions between fractional quantum Hall states and symmetry-protected topological states **** (Meng Cheng)</p>
+<p class="p2"><br></p>
+<p class="p1">20231227</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15074">https://arxiv.org/abs/2312.15074</a></span> Frequency-Dependent Superconducting States From the Two-Time Linear Response Theory: Application To Sr2RuO4</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15131">https://arxiv.org/abs/2312.15131</a></span> Stable Higher-Order Topological Dirac Semimetals with Z2 Monopole Charge in Alternating-twisted Multilayer Graphenes and beyond</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16164">https://arxiv.org/abs/2312.16164</a></span> Andreev bound states in superconductor-barrier-superconductor junctions of Rarita-Schwinger-Weyl semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15066">https://arxiv.org/abs/2312.15066</a></span> Optimal form of time-local non-Lindblad master equations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15410">https://arxiv.org/abs/2312.15410</a></span> Quantum-criticality in twisted bi-layer graphene</p>
+<p class="p3"><a href="https://arxiv.org/abs/2312.15958">https://arxiv.org/abs/2312.15958</a><span class="s2"> Gauging of generalized symmetry</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15961">https://arxiv.org/abs/2312.15961</a></span> Observation of Magnon Damping Minimum Induced by Kondo Coupling in a van der Waals Ferromagnet Fe3−xGeTe2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16042">https://arxiv.org/abs/2312.16042</a></span> Robust T-Linear Resistivity due to SU(4) Valley + Spin Fluctuation Mechanism in Magic Angle Twisted Bilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15155">https://arxiv.org/abs/2312.15155</a></span> Anomalous superfluid density in a disordered charge density wave material: Pd-intercalated ErTe3 (Steven A. Kivelson, Ian R. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.10230">https://arxiv.org/abs/2310.10230</a></span> Majorana Fermion Mean-Field Theories of Kitaev Quantum Spin Liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.12969">https://arxiv.org/abs/2312.12969</a></span> Explicit form for the most general Lorentz transformation revisited (Howard E. Haber)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.15348">https://arxiv.org/abs/2312.15348</a></span> Localization in Quantum Field Theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20231229</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16844">https://arxiv.org/abs/2312.16844</a></span> Defect bound states in the continuum without symmetry protection: bilayer graphene and beyond</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16287">https://arxiv.org/abs/2312.16287</a></span> Light-matter interactions in the vacuum of ultra-strongly coupled systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16454">https://arxiv.org/abs/2312.16454</a></span> A Lindbladian From Feynman-Vernon ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16284">https://arxiv.org/abs/2312.16284</a></span> Massless Lifshitz Field Theory for Arbitrary z *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16865">https://arxiv.org/abs/2312.16865</a></span> Cluster-Algorithm-Amenable Models of Gauge Fields and Matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16898">https://arxiv.org/abs/2312.16898</a></span> Higgs-Confinement Transitions in QCD from Symmetry Protected Topological Phases (Thomas T. Dumitrescu, Po-Shen Hsin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.16372">https://arxiv.org/abs/2312.16372</a></span> Convergence of Ginzburg-Landau expansions: superconductivity in the BCS theory and chiral symmetry breaking in the NJL model</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
