--- a/arxiv/2024_02_arxiv.html
+++ b/arxiv/2024_02_arxiv.html
@@ -108,6 +108,82 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.08720">https://arxiv.org/abs/2402.08720</a></span> Anomaly inflow, dualities, and quantum simulation of abelian lattice gauge theories induced by measurements</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.15228">https://arxiv.org/abs/2310.15228</a></span> Anomalous long-distance RKKY interaction in one-dimensional quasiperiodic chains (Junmo Jeon, SungBin Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08671">https://arxiv.org/abs/2212.08671</a></span> Noncommutative Field Theory of the Tkachenko Mode: Symmetries and Decay Rate (Yi-Hsien Du, Sergej Moroz, Dung Xuan Nguyen, Dam Thanh Son)</p>
+<br>
+<p class="p1">20240216</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.10203.pdf">https://arxiv.org/pdf/2402.10203.pdf</a></span> Direction-dependent conductivity in planar Hall set-ups with tilted Weyl/multi-Weyl semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.10201.pdf">https://arxiv.org/pdf/2402.10201.pdf</a></span> Mirror Chern Bands and Weyl Nodal Loops in Altermagnets (Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.09510.pdf">https://arxiv.org/pdf/2402.09510.pdf</a></span> Dissipation driven phase transition in the non-Hermitian Kondo model *** (Natan Andrei)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.09502.pdf">https://arxiv.org/pdf/2402.09502.pdf</a></span> Deconfined quantum criticality of nodal d-wave superconductivity, Néel order and charge order on the square lattice at half-filling ***** (Maine Christos, Henry Shackleton, Subir Sachdev, Zhu-Xi Luo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.09516.pdf">https://arxiv.org/pdf/2402.09516.pdf</a></span> Replica topological order in quantum mixed states and quantum error correction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.09520.pdf">https://arxiv.org/pdf/2402.09520.pdf</a></span> Kennedy-Tasaki transformation and non-invertible symmetry in lattice models beyond one dimension</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.09506.pdf">https://arxiv.org/pdf/2402.09506.pdf</a></span> Intertwined Magnetism and Superconductivity in Isolated Correlated Flat Bands **** (Johannes S. Hofmann, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2309.03010.pdf">https://arxiv.org/pdf/2309.03010.pdf</a></span> Topological Quantum Computation on a Chiral Kondo Chain (Elio J. K ̈onig, Alexei M. Tsvelik)</p>
+<p class="p2"><br></p>
+<p class="p1">20240219</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.10824.pdf">https://arxiv.org/pdf/2402.10824.pdf</a></span> Kadanoff-Baym equations for interacting systems with dissipative Lindbladian dynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.10658.pdf">https://arxiv.org/pdf/2402.10658.pdf</a></span> Human-machine collaboration: ordering mechanism of rank−2 spin liquid on breathing pyrochlore lattice (Nicolas Sadoune, Ke Liu, Han Yan, Ludovic D.C. Jaubert, Nic Shannon, Lode Pollet)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.10878.pdf">https://arxiv.org/pdf/2402.10878.pdf</a></span> A model of non-Fermi liquid with power law resistivity: strange metal with a not-so-strange origin ***** (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2307.05165.pdf">https://arxiv.org/pdf/2307.05165.pdf</a></span> φ4 lattice model with cubic symmetry in three dimensions: RG-flow and first order phase transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2305.16496.pdf">https://arxiv.org/pdf/2305.16496.pdf</a></span> Lieb-Schultz-Mattis Theorem in Open Quantum Systems***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.10173.pdf">https://arxiv.org/pdf/2402.10173.pdf</a></span> Universal Quantum Computing with Field-Mediated Unruh–DeWitt Qubits **** (Michael J. Lawler)</p>
+<p class="p2"><br></p>
+<p class="p1">20240220</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.11969.pdf">https://arxiv.org/pdf/2402.11969.pdf</a></span> Construction of optimized tight-binding models using ab initio Hamiltonian: Application to monolayer 2H-transition metal dichalcogenides (Sejoong Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/ftp/arxiv/papers/2402/2402.11749.pdf">https://arxiv.org/pdf/2402.11749.pdf</a></span> Evidence of heavy fermion physics in the thermoelectric transport of magic angle twisted bilayer graphene (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.12097.pdf">https://arxiv.org/pdf/2402.12097.pdf</a></span> Holographic dual effective field theory for an SYK model ***** (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.11007.pdf">https://arxiv.org/pdf/2402.11007.pdf</a></span> Stability of Quasiperiodic Superconductors **** (Nicole S. Ticea, Julian May-Mann, Jiewen Xiao, Erez Berg, Trithep Devakul)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.11434.pdf">https://arxiv.org/pdf/2402.11434.pdf</a></span> Deep learning methods for Hamiltonian parameter estimation and magnetic domain image generation in twisted van der Waals magnets (Kyoung-Min Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.12117.pdf">https://arxiv.org/pdf/2402.12117.pdf</a></span> Still mystery after all these years — Unconventional superconductivity of Sr2RuO4 —</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2401.04180.pdf">https://arxiv.org/pdf/2401.04180.pdf</a></span> Universal relation between energy gap and dielectric constant (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2310.18880.pdf">https://arxiv.org/pdf/2310.18880.pdf</a></span> Nature abhors a vacuum - A simple rigorous example of thermalization in an isolated macro- scopic quantum system (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2206.09941.pdf">https://arxiv.org/pdf/2206.09941.pdf</a></span> Excitations in the higher lattice gauge theory model for topological phases III: the (3+1)-dimensional case (Joe Huxford, Steven H. Simon)</p>
+<p class="p2"><br></p>
+<p class="p1">20240221</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.13129.pdf">https://arxiv.org/pdf/2402.13129.pdf</a></span> Magnetic transitions of biphenylene network layers induced by external perturbations (Sejoong Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.13074.pdf">https://arxiv.org/pdf/2402.13074.pdf</a></span> Josephson Signatures of the Superconducting Higgs/Amplitude Mode (Sang-Jun Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.12436.pdf">https://arxiv.org/pdf/2402.12436.pdf</a></span> Excitonic quantum criticality: From bilayer graphene to narrow Chern bands ***** (Zhengyan Darius Shi, Hart Goldman, Zhihuan Dong, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.13154.pdf">https://arxiv.org/pdf/2402.13154.pdf</a></span> Disorder-Free Sachdev-Ye-Kitaev models: Integrability and Quantum Chaos **** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.12610.pdf">https://arxiv.org/pdf/2402.12610.pdf</a></span> Nature of Topological Phase Transition of Kitaev Quantum Spin Liquids</p>
+<p class="p2"><br></p>
+<p class="p1">20240222</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.13283.pdf">https://arxiv.org/pdf/2402.13283.pdf</a></span> A Classical Luttinger liquid *** (Riccardo Fantoni)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.13312.pdf">https://arxiv.org/pdf/2402.13312.pdf</a></span> Bipartite mutual information in classical many-body dynamics (Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14006.pdf">https://arxiv.org/pdf/2402.14006.pdf</a></span> Interplay between 2D ferromagnetism and transport at the surface of FeSi (Hyeok Yoon, Johnpierre Paglione)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.13889.pdf">https://arxiv.org/pdf/2402.13889.pdf</a></span> Bispectral duality and separation of variables from surface defect transition (Saebyeok Jeong)</p>
+<p class="p2"><br></p>
+<p class="p1">20240223</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14057.pdf">https://arxiv.org/pdf/2402.14057.pdf</a></span> The Thermoelectric Effect and Its Natural Heavy Fermion Explanation in Twisted Bilayer and Trilayer Graphene (Dmitri K. Efetov, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14066.pdf">https://arxiv.org/pdf/2402.14066.pdf</a></span> Effective field theory for ersatz Fermi liquids *** (Xiaoyang Huang, Andrew Lucas, Umang Mehta, Marvin Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14295.pdf">https://arxiv.org/pdf/2402.14295.pdf</a></span> Fluctuations of the free energy of the spherical Sherrington–Kirkpatrick model with heavy-tailed interaction (Ji Oon Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20240226</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14906.pdf">https://arxiv.org/pdf/2402.14906.pdf</a></span> The Stability of Gapped Quantum Matter and Error-Correction with Adiabatic Noise (Sagar Vijay)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14916.pdf">https://arxiv.org/pdf/2402.14916.pdf</a></span> Entanglement Microscopy: Tomography and Entanglement Measures via Quantum Monte Carlo (William Witczak-Krempa, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.14944.pdf">https://arxiv.org/pdf/2402.14944.pdf</a></span> Non-Invertible Duality Interfaces in Field Theories with Exotic Symmetries</p>
+<p class="p2"><br></p>
+<p class="p1">20240227</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.15760.pdf">https://arxiv.org/pdf/2402.15760.pdf</a></span> Tunable incommensurability and spontaneous symmetry breaking in the reconstructed moiré-of-moiré lattices (Philip Kim, Young-Woo Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.15616.pdf">https://arxiv.org/pdf/2402.15616.pdf</a></span> Minimal Models for Altermagnetism *** (Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.16850.pdf">https://arxiv.org/pdf/2402.16850.pdf</a></span> Linear Magnetoresistance from Glassy Orders *** (Jaewon Kim, Ehud Altman, Shubhayu Chatterjee)</p>
+<p class="p2"><br></p>
+<p class="p1">20240228</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.17280.pdf">https://arxiv.org/pdf/2402.17280.pdf</a></span> Eigenstate switching of topologically ordered states using non-Hermitian perturbations (Cheol Hun Yeom, Beom Hyun Kim, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.17329.pdf">https://arxiv.org/pdf/2402.17329.pdf</a></span> Quantum kinetic equation and thermal conductivity tensor for bosons ***** (Lucile Savary, Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.16937.pdf">https://arxiv.org/pdf/2402.16937.pdf</a></span> Exact Calculations of Coherent Information for Toric Codes under Decoherence: Identifying the Fundamental Error Threshold ***** (Jong Yeon Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.16952.pdf">https://arxiv.org/pdf/2402.16952.pdf</a></span> Orbital selective order and Z3 Potts nematicity from a non-Fermi liquid *** (Andrew Hardy, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.17657.pdf">https://arxiv.org/pdf/2402.17657.pdf</a></span> Classification of electronic nematicity in three-dimensional crystals and quasicrystals (Daniel F. Agterberg. Rafael M. Fernandes)</p>
+<p class="p2"><br></p>
+<p class="p1">20240229</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.17817.pdf">https://arxiv.org/pdf/2402.17817.pdf</a></span> Gradient Properties of Perturbative Multiscalar RG Flows to Six Loops</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.17824.pdf">https://arxiv.org/pdf/2402.17824.pdf</a></span> Quantum glasses, reparameterization invariance, Sachdev-Ye-Kitaev models ****** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.17832.pdf">https://arxiv.org/pdf/2402.17832.pdf</a></span> Quantum anomalous Hall crystal at fractional filling of moire ́ superlattices (D. N. Sheng, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.18552.pdf">https://arxiv.org/pdf/2402.18552.pdf</a></span> Amplified entanglement witnessed in a quantum critical metal *** (Yuan Fang, Mounica Mahankali, Yiming Wang, Lei Chen, Haoyu Hu, Silke Paschen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2310.20676.pdf">https://arxiv.org/pdf/2310.20676.pdf</a></span> Kondo effect and its destruction in hetero-bilayer transition metal dichalcogenides *** (Fang Xie, Lei Chen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2310.16080.pdf">https://arxiv.org/pdf/2310.16080.pdf</a></span> Disorder effects in spiral spin liquids: Long-range spin textures, Friedel-like oscillations, and spiral spin glasses *** (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2310.12894.pdf">https://arxiv.org/pdf/2310.12894.pdf</a></span> Fractal Subsystem Symmetries, ’t Hooft Anomalies, and UV/IR Mixing</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2308.07372.pdf">https://arxiv.org/pdf/2308.07372.pdf</a></span> Classical Non-Relativistic Fractons *** (S.L. Sondhi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2303.16946.pdf">https://arxiv.org/pdf/2303.16946.pdf</a></span> NoRA: A Tensor Network Ansatz for Volume-Law Entangled Equilibrium States of Highly Connected Hamiltonians *** (Brian Swingle)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
